--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <img class="upload_uploaded">
         <div class="upload_uploading"></div>
         <div class="upload_grid">
-            <img class="upload_image" src="https://i.imgur.com/vwIQErh.png">
+            <img class="upload_image" src="https://imgur.com/gallery/mobywatel-images-2U9qm0H#5UXZQeZ">
             <p class="upload_text">Dodaj zdjęcie</p>
         </div>
     </div>
@@ -40,7 +40,7 @@
     <div class="selector_box">
         <div class="selected_grid">
             <p class="selector_text selected_text">Mężczyzna</p>
-            <img class="selected_arrow" src="https://i.imgur.com/RXsdBB6.png">
+            <img class="selected_arrow" src="https://imgur.com/gallery/mobywatel-images-2U9qm0H#5UXZQeZ">
         </div>
         <div class="option_box">
             <div class="selector_option" id="m">
